--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+:root{
+    --color-principal: #ae9cff;
+    --color-white: #ffffff;
+}
+
 *{
     padding: 0;
     margin: 0;
@@ -9,11 +14,11 @@
 }
 
 body{
-    background-color: #ae9cff;
+    background-color: var(--color-principal);
 }
 
 .container{
-    background-color: #ffffff;
+    background-color: var(--color-white);
     width: 90vmin;
     position: absolute;
     transform: translate(-50%, -50%);
