--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,11 @@ body{
     outline: none;
     font-size: 20px;
 }
+
+.result .details{
+    display: flex;
+    gap: 10px;
+    color: #b3b6d4;
+    margin: 5px 0 20px 0;
+    font-size: 14px;
+}
