--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 :root{
     --color-principal: #ae9cff;
     --color-white: #ffffff;
+    --color-gray: #575a7b;
 }
 
 *{
@@ -78,4 +79,16 @@ body{
     color: #b3b6d4;
     margin: 5px 0 20px 0;
     font-size: 14px;
+}
+
+.word-meaning{
+    color: var(--color-gray);
+}
+
+.word-example{
+    color: var(--color-gray);
+    font-style: italic;
+    border-left: 5px solid var(--color-principal);
+    padding-left: 20px;
+    margin-top: 30px;
 }
