--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,12 @@ body{
     outline: none;
     color: var(--color-white);
     border-radius: 5px;
+    font-size: 15px;
+    transition: all 300ms ease;
+}
+
+.search-box button:hover{
+    background-color: var(--color-gray);
 }
 
 .result{
